force-app/main/default/objects/Contact/fields/Academic_Standing__c.field-meta.xml
<CustomField>
    <fullName>Academic_Standing__c</fullName>
    <label>Academic Standing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>