force-app/main/default/objects/Contact/fields/Academic_Tenure_Status__c.field-meta.xml
<CustomField>
    <fullName>Academic_Tenure_Status__c</fullName>
    <label>Academic Tenure Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>