force-app/main/default/objects/Contact/fields/Accessibility_Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Accommodations__c</fullName>
    <label>Accessibility Accommodations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>