force-app/main/default/objects/Contact/fields/Accessibility_Training__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Training__c</fullName>
    <label>Accessibility Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>