force-app/main/default/objects/Contact/fields/Admission_Term__c.field-meta.xml
<CustomField>
    <fullName>Admission_Term__c</fullName>
    <label>Admission Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>