force-app/main/default/objects/Contact/fields/Alumni_Network_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Network_Opt_In__c</fullName>
    <label>Alumni Network Opt In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>