force-app/main/default/objects/Contact/fields/Anti_Harassment_Training__c.field-meta.xml
<CustomField>
    <fullName>Anti_Harassment_Training__c</fullName>
    <label>Anti Harassment Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>