force-app/main/default/objects/Contact/fields/API_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Integration_Status__c</fullName>
    <label>API Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>