force-app/main/default/objects/Contact/fields/API_Rate_Limit__c.field-meta.xml
<CustomField>
    <fullName>API_Rate_Limit__c</fullName>
    <label>API Rate Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>