force-app/main/default/objects/Contact/fields/App_Download_Status__c.field-meta.xml
<CustomField>
    <fullName>App_Download_Status__c</fullName>
    <label>App Download Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>