force-app/main/default/objects/Contact/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <label>Application Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>