force-app/main/default/objects/Contact/fields/Areas_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Areas_for_Improvement__c</fullName>
    <label>Areas for Improvement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>