force-app/main/default/objects/Contact/fields/Assignments_Submitted_Late__c.field-meta.xml
<CustomField>
    <fullName>Assignments_Submitted_Late__c</fullName>
    <label>Assignments Submitted Late</label>
    <length>255</length>
    <type>Text</type>
</CustomField>