force-app/main/default/objects/Contact/fields/Average_Module_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Module_Completion_Time__c</fullName>
    <label>Average Module Completion Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>