force-app/main/default/objects/Contact/fields/Average_Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Resolution_Time__c</fullName>
    <label>Average Resolution Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>