force-app/main/default/objects/Contact/fields/Average_Student_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Student_Rating__c</fullName>
    <label>Average Student Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>