force-app/main/default/objects/Contact/fields/Awards_Recognitions__c.field-meta.xml
<CustomField>
    <fullName>Awards_Recognitions__c</fullName>
    <label>Awards Recognitions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>