force-app/main/default/objects/Contact/fields/Background_Check_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Clearance__c</fullName>
    <label>Background Check Clearance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>