force-app/main/default/objects/Contact/fields/Badges_Earned__c.field-meta.xml
<CustomField>
    <fullName>Badges_Earned__c</fullName>
    <label>Badges Earned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>