force-app/main/default/objects/Contact/fields/Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Currency__c</fullName>
    <label>Billing Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>