force-app/main/default/objects/Contact/fields/Billing_Hold__c.field-meta.xml
<CustomField>
    <fullName>Billing_Hold__c</fullName>
    <label>Billing Hold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>