force-app/main/default/objects/Contact/fields/Bonus_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Eligibility__c</fullName>
    <label>Bonus Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>