force-app/main/default/objects/Contact/fields/Breach_Notification_SLA__c.field-meta.xml
<CustomField>
    <fullName>Breach_Notification_SLA__c</fullName>
    <label>Breach Notification SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>