force-app/main/default/objects/Contact/fields/Budget_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Budget_Utilized__c</fullName>
    <label>Budget Utilized</label>
    <length>255</length>
    <type>Text</type>
</CustomField>