force-app/main/default/objects/Contact/fields/Career_Goal__c.field-meta.xml
<CustomField>
    <fullName>Career_Goal__c</fullName>
    <label>Career Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>