force-app/main/default/objects/Contact/fields/Career_Path_Track__c.field-meta.xml
<CustomField>
    <fullName>Career_Path_Track__c</fullName>
    <label>Career Path Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>