force-app/main/default/objects/Contact/fields/Case_Volume__c.field-meta.xml
<CustomField>
    <fullName>Case_Volume__c</fullName>
    <label>Case Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>