force-app/main/default/objects/Contact/fields/Certifications_Completed__c.field-meta.xml
<CustomField>
    <fullName>Certifications_Completed__c</fullName>
    <label>Certifications Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>