force-app/main/default/objects/Contact/fields/Class_Rank__c.field-meta.xml
<CustomField>
    <fullName>Class_Rank__c</fullName>
    <label>Class Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>