force-app/main/default/objects/Contact/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <label>Commission Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>