force-app/main/default/objects/Contact/fields/Competitor_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Affiliations__c</fullName>
    <label>Competitor Affiliations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>