force-app/main/default/objects/Contact/fields/Content_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Content_Specialty__c</fullName>
    <label>Content Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>