force-app/main/default/objects/Contact/fields/Content_Update_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Content_Update_Frequency__c</fullName>
    <label>Content Update Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>