force-app/main/default/objects/Contact/fields/Continuing_Ed_Credits__c.field-meta.xml
<CustomField>
    <fullName>Continuing_Ed_Credits__c</fullName>
    <label>Continuing Ed Credits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>