force-app/main/default/objects/Contact/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <label>Contract End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>