force-app/main/default/objects/Contact/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <label>Contract Renewal Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>