force-app/main/default/objects/Contact/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <label>Contract Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>