force-app/main/default/objects/Contact/fields/Corporate_Training_Budget__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Training_Budget__c</fullName>
    <label>Corporate Training Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>