force-app/main/default/objects/Contact/fields/Course_Completion_Impact__c.field-meta.xml
<CustomField>
    <fullName>Course_Completion_Impact__c</fullName>
    <label>Course Completion Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>