force-app/main/default/objects/Contact/fields/Course_Dropout_Rate__c.field-meta.xml
<CustomField>
    <fullName>Course_Dropout_Rate__c</fullName>
    <label>Course Dropout Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>