force-app/main/default/objects/Contact/fields/Course_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Course_Engagement_Score__c</fullName>
    <label>Course Engagement Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>