force-app/main/default/objects/Contact/fields/Courses_Taught_Count__c.field-meta.xml
<CustomField>
    <fullName>Courses_Taught_Count__c</fullName>
    <label>Courses Taught Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>