force-app/main/default/objects/Contact/fields/Custom_Branding_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Custom_Branding_Allowed__c</fullName>
    <label>Custom Branding Allowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>