force-app/main/default/objects/Contact/fields/Customer_Satisfaction_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Impact__c</fullName>
    <label>Customer Satisfaction Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>