force-app/main/default/objects/Contact/fields/Cybersecurity_Training__c.field-meta.xml
<CustomField>
    <fullName>Cybersecurity_Training__c</fullName>
    <label>Cybersecurity Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>