force-app/main/default/objects/Contact/fields/Data_Privacy_Training__c.field-meta.xml
<CustomField>
    <fullName>Data_Privacy_Training__c</fullName>
    <label>Data Privacy Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>