force-app/main/default/objects/Contact/fields/Data_Processing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Data_Processing_Agreement__c</fullName>
    <label>Data Processing Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>