force-app/main/default/objects/Contact/fields/Data_Sync_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Data_Sync_Frequency__c</fullName>
    <label>Data Sync Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>