force-app/main/default/objects/Contact/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <label>Decision Maker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>