force-app/main/default/objects/Contact/fields/Dedicated_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Account_Manager__c</fullName>
    <label>Dedicated Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>