force-app/main/default/objects/Contact/fields/Degree_Institution__c.field-meta.xml
<CustomField>
    <fullName>Degree_Institution__c</fullName>
    <label>Degree Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>