force-app/main/default/objects/Contact/fields/Disciplinary_Record__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Record__c</fullName>
    <label>Disciplinary Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>