force-app/main/default/objects/Contact/fields/Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level__c</fullName>
    <label>Discount Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>