force-app/main/default/objects/Contact/fields/Discussion_Board_Posts__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Board_Posts__c</fullName>
    <label>Discussion Board Posts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>