force-app/main/default/objects/Contact/fields/Employee_Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Employee_Satisfaction_Score__c</fullName>
    <label>Employee Satisfaction Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>