force-app/main/default/objects/Contact/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <label>Enrollment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>