force-app/main/default/objects/Contact/fields/Escalation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Contact__c</fullName>
    <label>Escalation Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>