force-app/main/default/objects/Contact/fields/Ethics_Certification__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Certification__c</fullName>
    <label>Ethics Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>