force-app/main/default/objects/Contact/fields/Exclusivity_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity_Agreement__c</fullName>
    <label>Exclusivity Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>