force-app/main/default/objects/Contact/fields/Expected_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Graduation_Date__c</fullName>
    <label>Expected Graduation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>