force-app/main/default/objects/Contact/fields/Extracurricular_Interests__c.field-meta.xml
<CustomField>
    <fullName>Extracurricular_Interests__c</fullName>
    <label>Extracurricular Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>