force-app/main/default/objects/Contact/fields/Feedback_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Response_Time__c</fullName>
    <label>Feedback Response Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>