force-app/main/default/objects/Contact/fields/Financial_Aid_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Status__c</fullName>
    <label>Financial Aid Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>