force-app/main/default/objects/Contact/fields/First_Generation_Student__c.field-meta.xml
<CustomField>
    <fullName>First_Generation_Student__c</fullName>
    <label>First Generation Student</label>
    <length>255</length>
    <type>Text</type>
</CustomField>