force-app/main/default/objects/Contact/fields/Flight_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Flight_Risk_Assessment__c</fullName>
    <label>Flight Risk Assessment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>