force-app/main/default/objects/Contact/fields/Gamification_Points__c.field-meta.xml
<CustomField>
    <fullName>Gamification_Points__c</fullName>
    <label>Gamification Points</label>
    <length>255</length>
    <type>Text</type>
</CustomField>