force-app/main/default/objects/Contact/fields/GDPR_Compliance__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Compliance__c</fullName>
    <label>GDPR Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>