force-app/main/default/objects/Contact/fields/Goal_Achievement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Goal_Achievement_Percent__c</fullName>
    <label>Goal Achievement Percent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>