force-app/main/default/objects/Contact/fields/Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grant_Amount__c</fullName>
    <label>Grant Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>