force-app/main/default/objects/Contact/fields/High_School_GPA__c.field-meta.xml
<CustomField>
    <fullName>High_School_GPA__c</fullName>
    <label>High School GPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>