force-app/main/default/objects/Contact/fields/Highest_Degree_Earned__c.field-meta.xml
<CustomField>
    <fullName>Highest_Degree_Earned__c</fullName>
    <label>Highest Degree Earned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>