force-app/main/default/objects/Contact/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <label>Hire Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>