force-app/main/default/objects/Contact/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <label>Housing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>