force-app/main/default/objects/Contact/fields/Industry_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Industry_Certifications__c</fullName>
    <label>Industry Certifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>