force-app/main/default/objects/Contact/fields/International_Student__c.field-meta.xml
<CustomField>
    <fullName>International_Student__c</fullName>
    <label>International Student</label>
    <length>255</length>
    <type>Text</type>
</CustomField>