force-app/main/default/objects/Contact/fields/Internet_Reliability__c.field-meta.xml
<CustomField>
    <fullName>Internet_Reliability__c</fullName>
    <label>Internet Reliability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>