force-app/main/default/objects/Contact/fields/IP_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>IP_Agreement_Signed__c</fullName>
    <label>IP Agreement Signed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>