force-app/main/default/objects/Contact/fields/Joint_Webinars_Hosted__c.field-meta.xml
<CustomField>
    <fullName>Joint_Webinars_Hosted__c</fullName>
    <label>Joint Webinars Hosted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>