force-app/main/default/objects/Contact/fields/Language_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Language_Proficiency__c</fullName>
    <label>Language Proficiency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>