force-app/main/default/objects/Contact/fields/Last_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Evaluation_Date__c</fullName>
    <label>Last Evaluation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>