force-app/main/default/objects/Contact/fields/Last_Performance_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Performance_Review__c</fullName>
    <label>Last Performance Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>