force-app/main/default/objects/Contact/fields/Last_Security_Audit__c.field-meta.xml
<CustomField>
    <fullName>Last_Security_Audit__c</fullName>
    <label>Last Security Audit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>