force-app/main/default/objects/Contact/fields/Lead_Sharing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sharing_Agreement__c</fullName>
    <label>Lead Sharing Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>