force-app/main/default/objects/Contact/fields/Leadership_Potential__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Potential__c</fullName>
    <label>Leadership Potential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>