force-app/main/default/objects/Contact/fields/Learning_Style_Preference__c.field-meta.xml
<CustomField>
    <fullName>Learning_Style_Preference__c</fullName>
    <label>Learning Style Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>