force-app/main/default/objects/Contact/fields/License_Expiration__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration__c</fullName>
    <label>License Expiration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>