force-app/main/default/objects/Contact/fields/LMS_Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>LMS_Engagement_Level__c</fullName>
    <label>LMS Engagement Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>