force-app/main/default/objects/Contact/fields/LMS_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>LMS_Last_Login__c</fullName>
    <label>LMS Last Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>