force-app/main/default/objects/Contact/fields/LMS_Proficiency_Level__c.field-meta.xml
<CustomField>
    <fullName>LMS_Proficiency_Level__c</fullName>
    <label>LMS Proficiency Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>