force-app/main/default/objects/Contact/fields/Localization_Support__c.field-meta.xml
<CustomField>
    <fullName>Localization_Support__c</fullName>
    <label>Localization Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>