force-app/main/default/objects/Contact/fields/LTI_Version__c.field-meta.xml
<CustomField>
    <fullName>LTI_Version__c</fullName>
    <label>LTI Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>