force-app/main/default/objects/Contact/fields/Major_Program__c.field-meta.xml
<CustomField>
    <fullName>Major_Program__c</fullName>
    <label>Major Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>