force-app/main/default/objects/Contact/fields/Marketing_Co_op_Funds__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Co_op_Funds__c</fullName>
    <label>Marketing Co op Funds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>