force-app/main/default/objects/Contact/fields/Max_Student_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Student_Capacity__c</fullName>
    <label>Max Student Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>