force-app/main/default/objects/Contact/fields/Mentorship_Program__c.field-meta.xml
<CustomField>
    <fullName>Mentorship_Program__c</fullName>
    <label>Mentorship Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>