force-app/main/default/objects/Contact/fields/Mentorship_Role__c.field-meta.xml
<CustomField>
    <fullName>Mentorship_Role__c</fullName>
    <label>Mentorship Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>