force-app/main/default/objects/Contact/fields/Minimum_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Commitment__c</fullName>
    <label>Minimum Commitment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>