force-app/main/default/objects/Contact/fields/Minor_Program__c.field-meta.xml
<CustomField>
    <fullName>Minor_Program__c</fullName>
    <label>Minor Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>