force-app/main/default/objects/Contact/fields/Mobile_App_Available__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Available__c</fullName>
    <label>Mobile App Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>