force-app/main/default/objects/Contact/fields/Monthly_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Active_Users__c</fullName>
    <label>Monthly Active Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>