force-app/main/default/objects/Contact/fields/Offboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Status__c</fullName>
    <label>Offboarding Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>