force-app/main/default/objects/Contact/fields/Onboarding_Completion__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Completion__c</fullName>
    <label>Onboarding Completion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>