force-app/main/default/objects/Contact/fields/Optional_Courses_Completed__c.field-meta.xml
<CustomField>
    <fullName>Optional_Courses_Completed__c</fullName>
    <label>Optional Courses Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>