force-app/main/default/objects/Contact/fields/OSHA_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>OSHA_Training_Status__c</fullName>
    <label>OSHA Training Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>