force-app/main/default/objects/Contact/fields/Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance__c</fullName>
    <label>Outstanding Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>