force-app/main/default/objects/Contact/fields/Overload_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overload_Pay_Rate__c</fullName>
    <label>Overload Pay Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>