force-app/main/default/objects/Contact/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <label>Partner Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>