force-app/main/default/objects/Contact/fields/Payment_Plan_Active__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Active__c</fullName>
    <label>Payment Plan Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>