force-app/main/default/objects/Contact/fields/Peer_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Score__c</fullName>
    <label>Peer Review Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>