force-app/main/default/objects/Contact/fields/Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Performance_Rating__c</fullName>
    <label>Performance Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>