force-app/main/default/objects/Contact/fields/Preferred_Study_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Study_Time__c</fullName>
    <label>Preferred Study Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>