force-app/main/default/objects/Contact/fields/Preferred_Teaching_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Teaching_Method__c</fullName>
    <label>Preferred Teaching Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>