force-app/main/default/objects/Contact/fields/Preferred_Virtual_Meeting_Tool__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Virtual_Meeting_Tool__c</fullName>
    <label>Preferred Virtual Meeting Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>