force-app/main/default/objects/Contact/fields/Primary_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Role__c</fullName>
    <label>Primary Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>