force-app/main/default/objects/Contact/fields/Primary_Subject_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subject_Expertise__c</fullName>
    <label>Primary Subject Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>