force-app/main/default/objects/Contact/fields/Professional_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Professional_Affiliations__c</fullName>
    <label>Professional Affiliations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>