force-app/main/default/objects/Contact/fields/Promotion_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Eligibility__c</fullName>
    <label>Promotion Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>