force-app/main/default/objects/Contact/fields/Promotion_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Readiness__c</fullName>
    <label>Promotion Readiness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>