force-app/main/default/objects/Contact/fields/Publications_Count__c.field-meta.xml
<CustomField>
    <fullName>Publications_Count__c</fullName>
    <label>Publications Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>