force-app/main/default/objects/Contact/fields/Required_Compliance_Courses__c.field-meta.xml
<CustomField>
    <fullName>Required_Compliance_Courses__c</fullName>
    <label>Required Compliance Courses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>