force-app/main/default/objects/Contact/fields/Research_Interests__c.field-meta.xml
<CustomField>
    <fullName>Research_Interests__c</fullName>
    <label>Research Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>