force-app/main/default/objects/Contact/fields/Revenue_Share_Percent__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Percent__c</fullName>
    <label>Revenue Share Percent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>