force-app/main/default/objects/Contact/fields/ROI_Metric__c.field-meta.xml
<CustomField>
    <fullName>ROI_Metric__c</fullName>
    <label>ROI Metric</label>
    <length>255</length>
    <type>Text</type>
</CustomField>