force-app/main/default/objects/Contact/fields/Safety_Incidents_Reported__c.field-meta.xml
<CustomField>
    <fullName>Safety_Incidents_Reported__c</fullName>
    <label>Safety Incidents Reported</label>
    <length>255</length>
    <type>Text</type>
</CustomField>